[project]
name = "code-debug-env"
version = "1.0.0"
description = "RL environment for debugging Python code"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"